--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -12,7 +12,7 @@
       <a mat-list-item routerLink="users">Users</a>
       <a mat-list-item routerLink="contact">Contact</a>
       <!--*ngIf="!localStorage.getItem('user')"-->
-      <a mat-list-item href="#">Log In</a>
+      <a mat-list-item routerLink="account/login">Log In</a>
       <a mat-list-item href="#">Register</a>
     </mat-nav-list>
     <span class="spacer"></span>
