--- a/src/app/books/books-list/books-list.component.html
+++ b/src/app/books/books-list/books-list.component.html
@@ -1,3 +1,4 @@
+<button mat-raised-button color="accent">Add new book</button>
 <div class="mat-elevation-z8 books-table">
   <table mat-table matSort class="full-width-table" aria-label="Elements">
     <!-- idBook Column -->
@@ -28,6 +29,21 @@
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
       <td mat-cell *matCellDef="let row">{{row.description}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="favourites">
+      <th mat-header-cell  *matHeaderCellDef > Favourites </th>
+      <td mat-cell *matCellDef="let element" >
+        <button mat-button *ngIf="!checkIsFavourite(element.id_book)" (click)="addToFavourites(element.id_book); $event.stopPropagation()">Add to favourites</button>
+        <button mat-button *ngIf="checkIsFavourite(element.id_book)" (click)="removeFromFavourites(element.id_book); $event.stopPropagation()">Remove from favourites</button>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="handOver">
+      <th mat-header-cell *matHeaderCellDef > Select book </th>
+      <td mat-cell *matCellDef="let element" >
+        <button mat-button (click)="handOver(element.id_book); $event.stopPropagation()">Select</button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
