--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -7,16 +7,18 @@
     <mat-nav-list>
       <a mat-list-item routerLink="about">What is Bookcrossing?</a>
       <a mat-list-item routerLink="books">Books</a>
-      <a mat-list-item routerLink="books/favourites">Favourite Books</a>
-      <a mat-list-item routerLink="messages">Messages</a>
+      <a mat-list-item routerLink="books/favourites" *ngIf="isLoggedUser">Favourite Books</a>
+      <a mat-list-item routerLink="books/myBooks" *ngIf="isLoggedUser">My Books</a>
+      <a mat-list-item routerLink="messages" *ngIf="isLoggedUser">Messages</a>
       <a mat-list-item routerLink="users">Users</a>
       <a mat-list-item routerLink="contact">Contact</a>
-      <!--*ngIf="!localStorage.getItem('user')"-->
-      <a mat-list-item routerLink="account/login">Log In</a>
-      <a mat-list-item href="#">Register</a>
+      <a mat-list-item routerLink="account/login" *ngIf="!isLoggedUser">Log In</a>
+      <a mat-list-item routerLink="account/register" *ngIf="!isLoggedUser">Register</a>
+      <button mat-raised-button color="accent" *ngIf="isLoggedUser" (click)="logout()">Log out</button>
+      <a mat-list-item routerLink="books/handOver" *ngIf="isLoggedUser">Hand over book</a>
     </mat-nav-list>
-    <span class="spacer"></span>
     <button mat-raised-button color="accent">Click me!</button>
+    <span class="spacer"></span>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
@@ -28,7 +30,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>BOOKCROSSING</span>
+      <span routerLink="/">BOOKCROSSING</span>
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
