--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,19 +1,49 @@
+{{board}}
+{{errorMessage}}
+
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
 
-    <!-- Name Column -->
+    <!-- firstName Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      <td mat-cell *matCellDef="let row">{{row.firstName}}</td>
+    </ng-container>
+
+    <!-- username Column -->
+    <ng-container matColumnDef="username">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Username</th>
+      <td mat-cell *matCellDef="let row">{{row.username}}</td>
+    </ng-container>
+
+    <!-- city Column -->
+    <ng-container matColumnDef="city">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>City</th>
+      <td mat-cell *matCellDef="let row">{{row.city}}</td>
+    </ng-container>
+
+    <!-- province Column -->
+    <ng-container matColumnDef="province">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Province</th>
+      <td mat-cell *matCellDef="let row">{{row.province}}</td>
+    </ng-container>
+
+
+    <!-- added Books Column -->
+    <ng-container matColumnDef="addedBooks">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Added books amount</th>
+      <td mat-cell *matCellDef="let row">{{row.addedBooks}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="sendMessage">
+      <th mat-header-cell *matHeaderCellDef > Send message </th>
+      <td mat-cell *matCellDef="let element" >
+        <button mat-button (click)="sendMessage(element.username); $event.stopPropagation()">Select</button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="getDetailsLink(row.id)"></tr>
   </table>
 
   <mat-paginator #paginator
