--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -9,8 +9,9 @@
       <a mat-list-item routerLink="books">Books</a>
       <a mat-list-item routerLink="books/favourites" *ngIf="isLoggedUser">Favourite Books</a>
       <a mat-list-item routerLink="books/myBooks" *ngIf="isLoggedUser">My Books</a>
-      <a mat-list-item routerLink="messages" *ngIf="isLoggedUser">Messages</a>
+      <a mat-list-item routerLink="conversations" *ngIf="isLoggedUser">Messages</a>
       <a mat-list-item routerLink="users">Users</a>
+      <a mat-list-item routerLink="users/profile">My profile</a>
       <a mat-list-item routerLink="contact">Contact</a>
       <a mat-list-item routerLink="account/login" *ngIf="!isLoggedUser">Log In</a>
       <a mat-list-item routerLink="account/register" *ngIf="!isLoggedUser">Register</a>
