--- a/src/app/users/user-details/user-details.component.html
+++ b/src/app/users/user-details/user-details.component.html
@@ -1,1 +1,51 @@
 <p>user-details works!</p>
+
+<button mat-raised-button color="accent" *ngIf="isLoggedIn() && isProfileView()" (click)="editProfile()">Edit profile</button>
+<button mat-raised-button color="accent" *ngIf="isLoggedIn() && !isProfileView()" (click)="sendMessage()">Send message</button>
+
+<form [formGroup]="form">
+  <mat-form-field appearance="fill">
+    <mat-label>First name: </mat-label>
+    <input matInput type="text" formControlName="firstName" readonly>
+  </mat-form-field> <br/>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Username: </mat-label>
+    <input matInput type="text" formControlName="username" readonly> <!-- [errorStateMatcher]="matcher" -->
+  </mat-form-field> <br/>
+
+  <mat-form-field appearance="fill">
+    <mat-label>City: </mat-label>
+    <input matInput type="text" formControlName="city" readonly>  <!-- [errorStateMatcher]="matcher" -->
+  </mat-form-field> <br/>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Province: </mat-label>
+    <input matInput type="text" formControlName="province" readonly>
+  </mat-form-field> <br/>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Start date: </mat-label>
+    <input matInput type="text" formControlName="startDate" readonly>
+  </mat-form-field> <br/>
+
+<!--  <mat-form-field appearance="fill">-->
+<!--    <mat-label>Owned book amount: </mat-label>-->
+<!--    <input matInput type="text" formControlName="ownedBooks" readonly>-->
+<!--  </mat-form-field> <br/>-->
+
+  <mat-form-field appearance="fill">
+    <mat-label>Added books amount: </mat-label>
+    <input matInput type="text" formControlName="addedBooks" readonly>
+  </mat-form-field> <br/>
+
+
+<!--  <button mat-raised-button color="accent" *ngIf="isLoggedUser" (click)="editBook()">Edit book</button>-->
+<!--  <button mat-raised-button color="accent" *ngIf="!isFavourite && isLoggedUser" (click)="addToFavourites()">Add to favourites</button>-->
+<!--  <button mat-raised-button color="accent" *ngIf="isFavourite && isLoggedUser" (click)="removeFromFavourites()">Remove from favourites</button>-->
+<!--  <button mat-raised-button color="accent" *ngIf="isLoggedUser" (click)="reserveBook()">Reserve book</button>-->
+
+</form>
+
+<app-books-list [listMode]="'own'" [username]="form.get('username').value" [isAccount]="true"></app-books-list>
+<app-books-list [listMode]="'fav'" [username]="form.get('username').value" [isAccount]="true"></app-books-list>
