--- a/src/app/users/users-add-modify/users-add-modify.component.html
+++ b/src/app/users/users-add-modify/users-add-modify.component.html
@@ -1,56 +1,59 @@
-<h1 *ngIf="isAddMode">Add User</h1>
-<h1 *ngIf="!isAddMode">Edit User</h1>
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div class="form-row">
-    <div class="form-group col">
-<!--      <mat-form-field class="example-full-width">-->
-<!--        <mat-label>Favorite food</mat-label>-->
-<!--        <input matInput placeholder="Ex. Pizza" value="Sushi">-->
-<!--      </mat-form-field>-->
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your name</mat-label>
-        <input matInput formControlName="firstName">
-      </mat-form-field>
-    </div>
-    <div class="form-group col">
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your last name</mat-label>
-        <input matInput formControlName="lastName">
-      </mat-form-field>
-    </div>
-  </div>
+<h1>Edit User</h1>
+<form [formGroup]="form">
   <div class="form-row">
     <div class="form-group col">
       <mat-form-field appearance="fill">
-        <mat-label>Enter your username</mat-label>
+        <mat-label>Your username</mat-label>
         <input matInput formControlName="username">
       </mat-form-field>
     </div>
     <div class="form-group col">
       <mat-form-field appearance="fill">
-        <mat-label>Enter your password</mat-label>
-        <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'">
-        <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
-          <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-      </mat-form-field>
-      <!--        <em *ngIf="!isAddMode">(Leave blank to keep the same password)</em>-->
-      <!--        <div *ngIf="f.password.errors.required">Password is required</div>-->
-      <!--        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>-->
-    </div>
-    <div class="form-group col">
-      <mat-form-field appearance="fill">
         <mat-label>Enter your email</mat-label>
-        <input matInput placeholder="pat@example.com" formControlName="email" required>
+        <input matInput formControlName="email" required>
         <mat-error *ngIf="f.email.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
   </div>
+  <div class="form-row">
+    <div class="form-group col">
+      <mat-form-field appearance="fill">
+        <mat-label>Enter your name</mat-label>
+        <input matInput formControlName="firstName" required>
+      </mat-form-field>
+    </div>
+    <div class="form-group col">
+      <mat-form-field appearance="fill">
+        <mat-label>Enter your last name</mat-label>
+        <input matInput formControlName="lastName" required>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col">
+      <mat-form-field appearance="fill">
+        <mat-label>Enter your city</mat-label>
+        <input matInput formControlName="city" required>
+      </mat-form-field>
+    </div>
+    <div class="form-group col">
+      <mat-form-field appearance="fill">
+        <mat-label>Enter your province</mat-label>
+        <input matInput formControlName="province" required>
+      </mat-form-field>
+    </div>
+    <div class="form-group col">
+      <mat-form-field appearance="fill">
+        <mat-label>Enter your phone number</mat-label>
+        <input matInput formControlName="phoneNumber">
+      </mat-form-field>
+    </div>
+  </div>
   <div class="form-group">
-    <button [disabled]="loading" class="btn btn-primary">
+    <button mat-raised-button color="accent" [disabled]="loading" (click)="onSubmit()">
       <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-      Save
+      Save changes
     </button>
-    <a routerLink="/users" class="btn btn-link">Cancel</a>
+    <button mat-raised-button color="accent" (click)="cancel()">Cancel</button>
   </div>
 </form>
