--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,5 +1,5 @@
-{{board}}
-{{errorMessage}}
+<!--{{board}}-->
+<!--{{errorMessage}}-->
 
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
@@ -38,12 +38,19 @@
     <ng-container matColumnDef="sendMessage">
       <th mat-header-cell *matHeaderCellDef > Send message </th>
       <td mat-cell *matCellDef="let element" >
-        <button mat-button (click)="sendMessage(element.username); $event.stopPropagation()">Select</button>
+        <button mat-button (click)="sendMessage(element.username); $event.stopPropagation()">New message</button>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="handOver">
+      <th mat-header-cell *matHeaderCellDef > Select user </th>
+      <td mat-cell *matCellDef="let element" >
+        <button mat-button (click)="handOverBook(element.username); $event.stopPropagation()">Select</button>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="getDetailsLink(row.id)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="getDetailsLink(row.username)"></tr>
   </table>
 
   <mat-paginator #paginator
