--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -2,56 +2,76 @@
 <!--{{errorMessage}}-->
 
 <div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
+
+  <mat-table matTableFilter [exampleEntity]="filterEntity" [filterType]="filterType" matSort [dataSource]="dataSource" class="full-width-table" aria-label="Elements">
 
     <!-- firstName Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.firstName}}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <mat-form-field appearance="outline">
+          <mat-label>First name</mat-label>
+          <input matInput placeholder="Name" [(ngModel)]="filterEntity.firstName">
+        </mat-form-field>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.firstName}} </mat-cell>
     </ng-container>
 
     <!-- username Column -->
     <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Username</th>
-      <td mat-cell *matCellDef="let row">{{row.username}}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <mat-form-field appearance="outline">
+          <mat-label>Username</mat-label>
+          <input matInput placeholder="Username" [(ngModel)]="filterEntity.username">
+        </mat-form-field>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.username}} </mat-cell>
     </ng-container>
 
     <!-- city Column -->
     <ng-container matColumnDef="city">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>City</th>
-      <td mat-cell *matCellDef="let row">{{row.city}}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <mat-form-field appearance="outline">
+          <mat-label>City</mat-label>
+          <input matInput placeholder="City" [(ngModel)]="filterEntity.city">
+        </mat-form-field>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.city}} </mat-cell>
     </ng-container>
 
     <!-- province Column -->
     <ng-container matColumnDef="province">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Province</th>
-      <td mat-cell *matCellDef="let row">{{row.province}}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <mat-form-field appearance="outline">
+          <mat-label>Province</mat-label>
+          <input matInput placeholder="Province" [(ngModel)]="filterEntity.province">
+        </mat-form-field>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.province}} </mat-cell>
     </ng-container>
-
 
     <!-- added Books Column -->
     <ng-container matColumnDef="addedBooks">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Added books amount</th>
-      <td mat-cell *matCellDef="let row">{{row.addedBooks}}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Added books</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.addedBooks}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="sendMessage">
-      <th mat-header-cell *matHeaderCellDef > Send message </th>
-      <td mat-cell *matCellDef="let element" >
+      <mat-header-cell *matHeaderCellDef > Send message </mat-header-cell>
+      <mat-cell *matCellDef="let element" >
         <button mat-button (click)="sendMessage(element.username); $event.stopPropagation()">New message</button>
-      </td>
+      </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="handOver">
-      <th mat-header-cell *matHeaderCellDef > Select user </th>
-      <td mat-cell *matCellDef="let element" >
+      <mat-header-cell *matHeaderCellDef > Select user </mat-header-cell>
+      <mat-cell *matCellDef="let element" >
         <button mat-button (click)="handOverBook(element.username); $event.stopPropagation()">Select</button>
-      </td>
+      </mat-cell>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="getDetailsLink(row.username)"></tr>
-  </table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="getDetailsLink(row.username)"></mat-row>
+  </mat-table>
 
   <mat-paginator #paginator
       [length]="dataSource?.data.length"
