--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -13,12 +13,11 @@
       <a mat-list-item routerLink="users">Users</a>
       <a mat-list-item routerLink="users/profile">My profile</a>
       <a mat-list-item routerLink="contact">Contact</a>
+      <a mat-list-item routerLink="reports" *ngIf="isAdmin()">Reports</a>
       <a mat-list-item routerLink="account/login" *ngIf="!isLoggedUser">Log In</a>
-      <a mat-list-item routerLink="account/register" *ngIf="!isLoggedUser">Register</a>
       <button mat-raised-button color="accent" *ngIf="isLoggedUser" (click)="logout()">Log out</button>
       <a mat-list-item routerLink="books/handOver" *ngIf="isLoggedUser">Hand over book</a>
     </mat-nav-list>
-    <button mat-raised-button color="accent">Click me!</button>
     <span class="spacer"></span>
   </mat-sidenav>
   <mat-sidenav-content>
