--- a/src/app/users/user-details/user-details.component.html
+++ b/src/app/users/user-details/user-details.component.html
@@ -1,8 +1,13 @@
-<p>user-details works!</p>
+<script src="../../core/services/users.service.ts"></script><p>user-details works!</p>
 
 <button mat-raised-button color="accent" *ngIf="isLoggedIn() && isProfileView()" (click)="editProfile()">Edit profile</button>
 <button mat-raised-button color="accent" *ngIf="isLoggedIn() && isProfileView()" (click)="resetPassword()">Reset password</button>
+<button mat-raised-button color="accent" *ngIf="isLoggedIn() && (isProfileView() || isAdmin())" (click)="deleteAccount()">Delete account</button>
+<button mat-raised-button color="accent" *ngIf="isLoggedIn() && isAdmin() && isBlocked()" (click)="changeStatus()">Unblock account</button>
+<button mat-raised-button color="accent" *ngIf="isLoggedIn() && isAdmin() && !isBlocked()" (click)="changeStatus()">Block account</button>
 <button mat-raised-button color="accent" *ngIf="isLoggedIn() && !isProfileView()" (click)="sendMessage()">Send message</button>
+
+<button mat-raised-button color="accent" *ngIf="isLoggedIn() && !isProfileView()" (click)="reportUser()">Report User</button>
 
 <form [formGroup]="form">
   <mat-form-field appearance="fill">
@@ -12,12 +17,12 @@
 
   <mat-form-field appearance="fill">
     <mat-label>Username: </mat-label>
-    <input matInput type="text" formControlName="username" readonly> <!-- [errorStateMatcher]="matcher" -->
+    <input matInput type="text" formControlName="username" readonly>
   </mat-form-field> <br/>
 
   <mat-form-field appearance="fill">
     <mat-label>City: </mat-label>
-    <input matInput type="text" formControlName="city" readonly>  <!-- [errorStateMatcher]="matcher" -->
+    <input matInput type="text" formControlName="city" readonly>
   </mat-form-field> <br/>
 
   <mat-form-field appearance="fill">
@@ -30,23 +35,18 @@
     <input matInput type="text" formControlName="startDate" readonly>
   </mat-form-field> <br/>
 
-<!--  <mat-form-field appearance="fill">-->
-<!--    <mat-label>Owned book amount: </mat-label>-->
-<!--    <input matInput type="text" formControlName="ownedBooks" readonly>-->
-<!--  </mat-form-field> <br/>-->
-
   <mat-form-field appearance="fill">
     <mat-label>Added books amount: </mat-label>
     <input matInput type="text" formControlName="addedBooks" readonly>
   </mat-form-field> <br/>
-
-
-<!--  <button mat-raised-button color="accent" *ngIf="isLoggedUser" (click)="editBook()">Edit book</button>-->
-<!--  <button mat-raised-button color="accent" *ngIf="!isFavourite && isLoggedUser" (click)="addToFavourites()">Add to favourites</button>-->
-<!--  <button mat-raised-button color="accent" *ngIf="isFavourite && isLoggedUser" (click)="removeFromFavourites()">Remove from favourites</button>-->
-<!--  <button mat-raised-button color="accent" *ngIf="isLoggedUser" (click)="reserveBook()">Reserve book</button>-->
-
 </form>
 
-<app-books-list [listMode]="'own'" [username]="form.get('username').value" [isAccount]="true"></app-books-list>
-<app-books-list [listMode]="'fav'" [username]="form.get('username').value" [isAccount]="true"></app-books-list>
+<div>
+  <h3>Books added</h3>
+  <app-books-list [listMode]="'own'" [username]="form.get('username').value" [isAccount]="true"></app-books-list>
+</div>
+
+<div>
+  <h3>Favourite books</h3>
+  <app-books-list [listMode]="'fav'" [username]="form.get('username').value" [isAccount]="true"></app-books-list>
+</div>
