add filters to book list

--- a/src/app/users/user-details/user-details.component.html
+++ b/src/app/users/user-details/user-details.component.html
@@ -42,11 +42,11 @@
 </form>
 
 <div>
-  <h3>Books added</h3>
-  <app-books-list [listMode]="'own'" [username]="form.get('username').value" [isAccount]="true"></app-books-list>
+  <h3>Books owned by user</h3>
+  <app-books-list [listMode]="'own'" [username]="form.get('username').valueChanges" [isAccount]="true"></app-books-list>
 </div>
 
 <div>
-  <h3>Favourite books</h3>
-  <app-books-list [listMode]="'fav'" [username]="form.get('username').value" [isAccount]="true"></app-books-list>
+  <h3>Added books by user</h3>
+  <app-books-list [listMode]="'added'" [username]="form.get('username').valueChanges" [isAccount]="true"></app-books-list>
 </div>
